--- a/client/app/home/home.template.html
+++ b/client/app/home/home.template.html
@@ -29,7 +29,7 @@
             <li>View providers around you</li>
           </ul>
           <div class="market-links">
-            <a href="iosStore" target="_blank"><img class="ios" src="/images/app-store.png" /></a>
+            <a href="https://itunes.apple.com/us/app/washondemand/id1098849970?mt=8" target="_blank"><img class="ios" src="/images/app-store.png" /></a>
             <a href="https://play.google.com/store/apps/details?id=com.ionicframework.washondemand" target="_blank"><img class="google" src="/images/play-store.png" /></a>
           </div>
         </div>
